@@ -1,6 +1,6 @@
 ## texk/web2c/luatexdir/am/libluatex.am: Makefile fragment for libluatex.
 ##
-## Copyright (C) 2009-2014 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
 ## liblua52
@@ -25,8 +25,8 @@ libluatex_a_CPPFLAGS = $(libluatex_a_preflags) $(LUA_INCLUDES)
 libluajittex_a_CPPFLAGS = $(libluatex_a_preflags) $(LUAJIT_INCLUDES) $(LUAJIT_DEFINES)
 libluajittex_a_CPPFLAGS += -DLuajitTeX
 
-libluatex_a_CXXFLAGS = # $(WARNING_CXXFLAGS)
-libluajittex_a_CXXFLAGS = # $(WARNING_CXXFLAGS)
+libluatex_a_CXXFLAGS = $(WARNING_CXXFLAGS)
+libluajittex_a_CXXFLAGS = $(WARNING_CXXFLAGS)
 
 dist_libluatex_a_SOURCES = \
 	luatexdir/lua/lstrlibext.c
